@@ -1266,6 +1266,7 @@ containing all of the search terms will appear in the result).",
 'userrights-groupsavailable' => 'Available groups:',
 'userrights-groupshelp' => 'Select groups you want the user to be removed from or added to.
 Unselected groups will not be changed. You can deselect a group with CTRL + Left Click',
+'userrights-reason' => 'Reason:',
 
 # Groups
 'group'                   => 'Group:',
